--- a/BibliotecaUteco/BibliotecaUteco.Client/_Imports.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/_Imports.razor
@@ -48,9 +48,11 @@
 @using BibliotecaUteco.Client.Components.Genres.Skeletons
 @using BibliotecaUteco.Client.Components.Genres.Views
 @using BibliotecaUteco.Client.Components.Books.Skeletons
+@using BibliotecaUteco.Client.Components.Readers.Skeletons
 
 @using BibliotecaUteco.Client.Requests.Genres.Queries
 @using BibliotecaUteco.Client.Requests.Readers.Actions
+
 @using BibliotecaUteco.Client.Components.Readers.Forms
 
 @using BibliotecaUteco.Client.Requests.Books.Actions
